19990604-11:45 CET Eddie Runia
  * source/rtl/classes.c
    _GetClassName() called by ClassName()

19990603-00:00 PST Ron Pinkas
  * hvm.c
    - Reverted VitualMachine() to use case switch rather than direct dynamic call for processing pcodes,
      since such optimization already done by c compiler.

19990604-02:22 Ryszard Glab <rglab@imid.med.pl>

* source/compiler/harbour.y
 * corrected "unmatched END" error if BEGIN/END SEQUENCE was used
 + LOOP now loops to the begginig of FOR/NEXT or WHILE statement
 + EXIT now exits from FOR/NEXT or WHILE statement

* source/compiler/harbour.l
 * corrected support for the following keywords:
   IF, IIF (90 % compatible with Clipper), IN, INCLUDE, INIT, LOCAL, LOOP

* source/vm/hvm.c
 local variables passed by reference in a codeblock are handled
 correctly now

* include/hberrors.h
 + added new error message

* tests/working/keywords.prg
 + added some new keywords for compatibility testing

+ tests/working/keywords.ch
 + new file for INCLUDE testing

+ doc/codebloc.txt
 + new file with a short description of a codeblock implementation


19990603-19:00 EDT David G. Holm <dholm@jsd-llc.com>
  Thanks go to Ryszard Glab <rglab@imid.med.pl>
  * makefile.dos
    - Added -r to two make lines for source/compiler

19990604-00:25 CET Eddie Runia
  * source/rtl/classes.c
    With _GetClassName(); optimized; more comments; more clean-up

19990603-21:50 CET Eddie Runia
  * source/rtl/classes.c; tests/working/run_exp.h
    OBJFUNC.PRG added to init symbols scheme.

19990603-20:20 CET Eddie Runia
  * source/rtl/classes.c; source/vm/initsymb.c; tests/working/run_exp.h
    First implementation of init symbols scheme.

19990603-14:00 EDT David G. Holm <dholm@jsd-llc.com>
  * makefile.dos
    - Even with the -y in the source/compiler/makefile.dos, when I
      used builddos, which uses makefile.dos, instead of a temporary
      replacement batch file that I used before I figured out why I